--- a/.chezmoiignore
+++ b/.chezmoiignore
@@ -1,2 +1,7 @@
+/README.md
 /.vim
 /.mime.types
+
+# https://www.chezmoi.io/user-guide/include-files-from-elsewhere/#include-a-subdirectory-from-a-url
+.oh-my-zsh/cache/
+.oh-my-zsh/custom/themes/powerlevel10k/**/*.zwc
