--- a/.chezmoiexternal.toml
+++ b/.chezmoiexternal.toml
@@ -14,17 +14,21 @@
         "ohmyzsh-master/tools/"
     ]
 [".oh-my-zsh/plugins"]
+# This is a workaround to include subfolders of excluded folders
     type = "archive"
     url = "https://github.com/ohmyzsh/ohmyzsh/archive/master.tar.gz"
     exact = true
     stripComponents = 2
     refreshPeriod = "168h"
+    # The syntax is odd; must use '/**'
+    # Exclude specific files using .chezmoiignore
     include = [
         "ohmyzsh-master/plugins/zsh-interactive-cd/**",
         "ohmyzsh-master/plugins/sublime/**",
         "ohmyzsh-master/plugins/dotenv/**",
         "ohmyzsh-master/plugins/gnu-utils/**",
         "ohmyzsh-master/plugins/poetry/**",
+        "ohmyzsh-master/plugins/z/**",
     ]
 [".oh-my-zsh/custom/plugins/evalcache"]
     type = "archive"
@@ -32,18 +36,21 @@
     exact = true
     stripComponents = 1
     refreshPeriod = "168h"
+    exclude = ["*/*.md", "*/LICENSE", "*/.*"]
 [".oh-my-zsh/custom/plugins/zsh-nvm"]
     type = "archive"
     url = "https://github.com/lukechilds/zsh-nvm/archive/master.tar.gz"
     exact = true
     stripComponents = 1
     refreshPeriod = "168h"
+    exclude = ["*/*.md", "*/LICENSE", "*/tests",  "*/.*"]
 [".oh-my-zsh/custom/plugins/zsh-autosuggestions"]
     type = "archive"
     url = "https://github.com/zsh-users/zsh-autosuggestions/archive/master.tar.gz"
     exact = true
     stripComponents = 1
     refreshPeriod = "168h"
+    exclude = ["*/*.md", "*/LICENSE", "*/spec",  "*/.*"]
 [".oh-my-zsh/custom/plugins/zsh-syntax-highlighting"]
     type = "archive"
     url = "https://github.com/zsh-users/zsh-syntax-highlighting/archive/master.tar.gz"
