--- a/.chezmoiignore
+++ b/.chezmoiignore
@@ -1,7 +1,15 @@
+.DS_Store
 /README.md
 /.vim
 /.mime.types
 
 # https://www.chezmoi.io/user-guide/include-files-from-elsewhere/#include-a-subdirectory-from-a-url
-.oh-my-zsh/cache/
-.oh-my-zsh/custom/themes/powerlevel10k/**/*.zwc
+/.oh-my-zsh/cache/
+/.oh-my-zsh/custom/themes/powerlevel10k/**/*.zwc
+/.oh-my-zsh/log/
+/.oh-my-zsh/**/example*
+/.oh-my-zsh/plugins/**/*.md
+/.oh-my-zsh/plugins/**/demo.gif
+/.oh-my-zsh/plugins/**/LICENSE
+/.oh-my-zsh/plugins/z/img/
+
